fix(layout): removes additional spacing on mobile

--- a/_sass/steve/_layout.scss
+++ b/_sass/steve/_layout.scss
@@ -6,6 +6,11 @@ body {
   margin: var(--gap) auto;
   padding-left: calc(var(--gap) / 2);
   padding-right: calc(var(--gap) / 2);
+
+  @media screen and (max-width: 600px) {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 /*
